// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChromeNavExapandable should not render nav item expandable 1`] = `<div />`;

exports[`ChromeNavExapandable should render nav item expandable 1`] = `
<div>
  <li
    class="pf-c-nav__item pf-m-expandable"
    data-ouia-component-id="OUIA-Generated-NavExpandable-1"
    data-ouia-component-type="PF4/NavExpandable"
    data-ouia-safe="true"
    data-quickstart-id="Foo"
  >
    <button
      aria-expanded="false"
      class="pf-c-nav__link"
      id="test-id"
    >
      Foo
      <span
        class="pf-c-nav__toggle"
      >
        <span
          class="pf-c-nav__toggle-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
        </span>
      </span>
    </button>
    <section
      aria-labelledby="test-id"
      class="pf-c-nav__subnav"
      hidden=""
    >
      
      <ul
        class="pf-c-nav__list"
      >
        <li
          class="pf-c-nav__item"
          data-ouia-component-id="title"
          data-ouia-component-type="PF4/NavItem"
          data-ouia-safe="true"
        >
          <a
            class="pf-c-nav__link"
            data-quickstart-id="foo_bar"
            data-testid="router-link"
            href="/foo/bar"
          >
            Title
             
          </a>
        </li>
      </ul>
    </section>
  </li>
</div>
`;

exports[`ChromeNavExapandable should render nav item expandable with items 1`] = `
<div>
  <li
    class="pf-c-nav__item pf-m-expandable"
    data-ouia-component-id="OUIA-Generated-NavExpandable-2"
    data-ouia-component-type="PF4/NavExpandable"
    data-ouia-safe="true"
    data-quickstart-id="Foo"
  >
    <button
      aria-expanded="false"
      class="pf-c-nav__link"
      id="test-id"
    >
      Foo
      <span
        class="pf-c-nav__toggle"
      >
        <span
          class="pf-c-nav__toggle-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
        </span>
      </span>
    </button>
    <section
      aria-labelledby="test-id"
      class="pf-c-nav__subnav"
      hidden=""
    >
      
      <ul
        class="pf-c-nav__list"
      >
        <li
          class="pf-c-nav__item"
          data-ouia-component-id="Sub Item"
          data-ouia-component-type="PF4/NavItem"
          data-ouia-safe="true"
        >
          <a
            class="pf-c-nav__link"
            data-quickstart-id="foo"
            data-testid="router-link"
            href="/foo"
          >
            Sub Item
             
          </a>
        </li>
      </ul>
    </section>
  </li>
</div>
`;
